Testing overflow: hidden to see if can avoid scroll bars on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@ body {
   z-index: 1;
   width: 100vw;
   height: 100vh;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #canvas {
